tests/checker/fail/ctor_family_duplicate.can
Label = String

Label = (Int) => Label {
    Label("a")
}

Label = (Int) => Label {
    Label("b")
}

main = () => Unit {
    Label(1).print()
}
